[package]
name = "erupt-bootstrap"
version = "0.3.0"
authors = ["Friz64 <friz64mc@protonmail.com>"]
license = "Zlib"
description = "vk-bootstrap for Rust"
documentation = "https://docs.rs/erupt-bootstrap"
repository = "https://gitlab.com/Friz64/erupt-bootstrap"
readme = "README.md"
keywords = ["gamedev", "graphics", "vulkan"]
categories = ["game-development", "graphics"]
edition = "2021"

[dependencies]
erupt = { version = "0.23", default-features = false }
raw-window-handle = { version = "0.5", optional = true }
thiserror = "1"

[features]
default = ["surface"]
surface = ["raw-window-handle", "erupt/surface"]

[dev-dependencies]
# enables the default erupt features for examples and tests
erupt = "0.23"
winit = "0.27"
