[package]
name = "erupt-bootstrap"
version = "0.3.0"
authors = ["Friz64 <friz64mc@protonmail.com>"]
license = "Zlib"
description = "vk-bootstrap for Rust"
documentation = "https://docs.rs/erupt-bootstrap"
repository = "https://gitlab.com/Friz64/erupt-bootstrap"
readme = "README.md"
keywords = ["gamedev", "graphics", "vulkan"]
categories = ["game-development", "graphics"]
edition = "2021"

[dependencies]
ash = "0.37.1+1.3.235"
cstr = "0.2.11"
raw-window-handle = { version = "0.5", optional = true }
smallvec = "1.10.0"
thiserror = "1"

[features]
default = ["surface"]
surface = ["raw-window-handle"]

[dev-dependencies]
winit = "0.27"
